hphp/hack/test/typecheck/xhp_modifier/xhp_modifier_no_dashes.php
<?hh

// XHP classes with dash in the name is not allowed.
xhp class Foo-bar {}
